# ipa-application

./: DEVELOPMENT_SUMMARY.md  PROJECT_STRUCTURE.md  README.md  RELEASE_NOTES_v1.0.0.md  RELEASE_NOTES_v1.1.0.md  build_all.sh  build_sdk.sh  quickstart.sh
ipa_sdk_pc/: CMakeLists.txt
ipa_sdk_pc/ipa-src/: CMakeLists.txt  GSM Association - RSP2 Root CI1.pem  SMDP PLUS RSP GOOG.pem  ipa.c  ipa.h  ipa_display.c  ipa_display.h  ipa_json_extractor.c  ipa_json_extractor.h  ipa_local.c  ipa_local.h  ipa_tlv_generator.c  ipa_tlv_generator.h  ipa_typedefs.h
ipa_sdk_pc/ipa-src/esipa/: CMakeLists.txt  esipa.c  esipa.h  esipa_display.c  esipa_display.h  esipa_message_from_eim_to_ipa_typedefs.h  esipa_message_from_ipa_to_eim_typedefs.h  esipa_typedefs.h
ipa_sdk_pc/ipa-src/esipa/data-binding/: CMakeLists.txt  esipa_data_binding.c  esipa_data_binding.h
ipa_sdk_pc/ipa-src/esipa/data-binding/asn1/: CMakeLists.txt  esipa_tlv_extractor.c  esipa_tlv_extractor.h  esipa_tlv_generator.c  esipa_tlv_generator.h
ipa_sdk_pc/ipa-src/esipa/data-binding/json/: CMakeLists.txt  esipa_json_extractor.c  esipa_json_extractor.h  esipa_json_generator.c  esipa_json_generator.h
ipa_sdk_pc/ipa-src/esipa/protocols/: CMakeLists.txt
ipa_sdk_pc/ipa-src/esipa/protocols/async/: CMakeLists.txt  esipa_async.c  esipa_async.h
ipa_sdk_pc/ipa-src/esipa/protocols/async/lwm2m/: CMakeLists.txt  esipa_lwm2m.c  esipa_lwm2m.h
ipa_sdk_pc/ipa-src/esipa/protocols/async/mqtt/: CMakeLists.txt  esipa_mqtt.c  esipa_mqtt.h
ipa_sdk_pc/ipa-src/esipa/protocols/sync/: CMakeLists.txt  esipa_sync.c  esipa_sync.h
ipa_sdk_pc/ipa-src/esipa/protocols/sync/http/: CMakeLists.txt  esipa_http.c  esipa_http.h
ipa_sdk_pc/ipa-src/hw/linux/: CMakeLists.txt  ipa_core.c  ipa_core.h
ipa_sdk_pc/ipa-src/hw/linux/lwm2m/: CMakeLists.txt  lwm2m_client_linux.c
ipa_sdk_pc/ipa-src/hw/linux/lwm2m/objects/: CMakeLists.txt  object_device.c  object_device.h  object_esim_iot.c  object_esim_iot.h  object_security.c  object_security.h  object_server.c  object_server.h
ipa_sdk_pc/ipa-src/interfaces/: lwm2m_client.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/: CMakeLists.txt
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/: CMakeLists.txt  typedefs.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/device-info/: CMakeLists.txt  device_info.c  device_info.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/domain/: CMakeLists.txt
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/domain/base64/: CMakeLists.txt  base64.c  base64.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/domain/json/: CMakeLists.txt  json_data_extractor.c  json_data_extractor.h  json_generator.c  json_generator.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/domain/notifications/: CMakeLists.txt  notifications_delivery.c  notifications_delivery.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/domain/rsp/: CMakeLists.txt  mutual_authentication.c  mutual_authentication.h  ppr_verification.c  ppr_verification.h  rsp.c  rsp.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/domain/tlv/: CMakeLists.txt  ber_tlv_parser.c  ber_tlv_parser.h  tlv_data_extractor.c  tlv_data_extractor.h  tlv_generator.c  tlv_generator.h  tlv_lengths.h  tlv_tags.h  tlv_values.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/domain/utils/: CMakeLists.txt  apdu_utils.c  apdu_utils.h  byte_utils.c  byte_utils.h  network_utils.c  network_utils.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/gsma/: CMakeLists.txt
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/gsma/data-binding/: CMakeLists.txt  gsma_typedefs.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/gsma/data-binding/json/: CMakeLists.txt  gsma_json_extractor.c  gsma_json_extractor.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/gsma/interfaces/: CMakeLists.txt
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/gsma/interfaces/es10/: CMakeLists.txt  es10.c  es10.h  es10_display.c  es10_display.h  es10_tlv_extractor.c  es10_tlv_extractor.h  es10_tlv_generator.c  es10_tlv_generator.h  es10_typedefs.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/gsma/interfaces/es11/: CMakeLists.txt  es11.c  es11.h  es11_typedefs.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/gsma/protocols/: CMakeLists.txt
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/logger/: CMakeLists.txt  log.c  log.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/network/: CMakeLists.txt  network.c  network.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/smartcard/: CMakeLists.txt  apdu.c  apdu.h  smartcard.c  smartcard.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/smartcard/at/: CMakeLists.txt  smartcard_at.c  smartcard_at.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/core/smartcard/mock/: CMakeLists.txt  smartcard_mock.c  smartcard_mock.h
ipa_sdk_pc/ipa-src/profile-assistant-commons/hw/linux/: CMakeLists.txt  http_client_linux.c  linux_typedefs.h  logger_linux.c  memory_manager_linux.c  mqtt_client_linux.c  semaphore_linux.c  serial_port_linux.c  serial_termios_linux.c  sha256_linux.c  string_ext.c  timer_linux.c  user_consent_linux.c
ipa_sdk_pc/ipa-src/profile-assistant-commons/interfaces/: CMakeLists.txt  http_client.h  logger.h  memory_manager.h  mqtt_client.h  semaphore_manager.h  serial.h  sha256.h  string_ext.h  timer.h  user_consent.h
ipad_host_app/: CMakeLists.txt
ipad_host_app/config/: ipad_config.example.json
ipad_host_app/docs/: API_Reference.md  Architecture_Design.md  CONFIG_GUIDE.md  User_Guide.md
ipad_host_app/include/: app_api_definitions.h  command_builder.h  config_manager.h  ipad_app_types.h  ipad_wrapper.h  json_helper.h  response_parser.h
ipad_host_app/src/: main.c
ipad_host_app/src/business_logic/: command_builder.c  param_validator.c  response_parser.c
ipad_host_app/src/debug/: mock_response.c
ipad_host_app/src/gui/: gui_api_tree.c  gui_api_tree.h  gui_log_display.c  gui_log_display.h  gui_main.c  gui_main.h  gui_param_input.c  gui_param_input.h
ipad_host_app/src/sdk_wrapper/: ipad_wrapper.c
ipad_host_app/src/utils/: config_manager.c  json_helper.c  logger.c
(+34 files in other folders)
